--- a/StudentsWebApplication/index.html
+++ b/StudentsWebApplication/index.html
@@ -6,14 +6,21 @@
 <body>
     <script src="Scripts/jquery-2.1.4.min.js"></script>
     <script src="Scripts/angular.min.js"></script>
+    <script src="Scripts/bootstrap.min.js"></script>
     <script src="Scripts/app/scripts.js"></script>
     <script src="Scripts/app/students-controller.js"></script>
     <link rel="stylesheet" href="Content/bootstrap.min.css">
-    <link rel="stylesheet" href="Content/students-styles.css">
-    
+    <link rel="stylesheet" href="Content/students-styles.css">   
+
     <div id="mainForms" ng-app="StudApp" ng-controller="StudController">
+
         <form>
+            <div id="alert-block" class="table-responsive container col-xs-12 col-md-8 div-right">
+
+            </div>
+
             <div class="table-responsive container col-xs-12 col-md-8 div-left div-style">
+                <br />
                 <h2>Студенты</h2>
 
                 <table class="table table-hover table-condensed">
@@ -35,7 +42,7 @@
                             </td>
                             <td>
                                 <button class="btn btn-default"
-                                        ng-click="deleteStudent(s.Id)">
+                                        ng-click="deleteStudentPrep(s)">
                                     Удалить
                                 </button>
                             </td>
@@ -73,7 +80,7 @@
                             </td>
                             <td>
                                 <button class="btn btn-default"
-                                        ng-click="deleteCourse(s.Id)">
+                                        ng-click="deleteCoursePrep(s)">
                                     Удалить
                                 </button>
                             </td>
@@ -112,7 +119,7 @@
                             </td>
                             <td>
                                 <button class="btn btn-default"
-                                        ng-click="deleteStudentCourse(s.Id)">
+                                        ng-click="deleteStudentCoursePrep(s)">
                                     Удалить
                                 </button>
                             </td>
@@ -150,7 +157,19 @@
                 <button ng-click="editStudentCancel()"
                         class="btn btn-default">
                     Отмена
-                </button>  
+                </button>
+            </form>
+
+            <form id="delete_student_form" class="container div-style div-editor-style" style="visibility:hidden">
+                <p>Вы уверены, что хотите удалить студента из базы данных?</p>
+                <br>
+                <button ng-click="deleteStudent()" class="btn btn-danger">
+                    Удалить
+                </button>
+                <button ng-click="editStudentCancel()"
+                        class="btn btn-default">
+                    Отмена
+                </button>
             </form>
 
             <form id="edit_course_form" class="container div-style div-editor-style" style="visibility:hidden">
@@ -160,6 +179,18 @@
                 <input type="text" class="form-control" ng-model="selectedCourse.Lecturer">
                 <br><br>
                 <button ng-click="addOrUpdateCourse()" class="btn btn-default">Сохранить</button>
+                <button ng-click="editCourseCancel()"
+                        class="btn btn-default">
+                    Отмена
+                </button>
+            </form>
+
+            <form id="delete_course_form" class="container div-style div-editor-style" style="visibility:hidden">
+                <p>Вы уверены, что хотите удалить предмет из базы данных?</p>
+                <br>
+                <button ng-click="deleteCourse()" class="btn btn-danger">
+                    Удалить
+                </button>
                 <button ng-click="editCourseCancel()"
                         class="btn btn-default">
                     Отмена
@@ -176,6 +207,18 @@
                         ng-options="s.Id as s.Title for s in courses"></select>
                 <br><br>
                 <button ng-click="addOrUpdateStudentCourse()" class="btn btn-default">Сохранить</button>
+                <button ng-click="editStudentCourseCancel()"
+                        class="btn btn-default">
+                    Отмена
+                </button>
+            </form>
+
+            <form id="delete_student_course_form" class="container div-style div-editor-style" style="visibility:hidden">
+                <p>Вы уверены, что хотите удалить соответствие студента и предмета из базы данных?</p>
+                <br>
+                <button ng-click="deleteStudentCourse()" class="btn btn-danger">
+                    Удалить
+                </button>
                 <button ng-click="editStudentCourseCancel()"
                         class="btn btn-default">
                     Отмена
